force-app/main/default/objects/Lead/fields/Cote__c.field-meta.xml
<CustomField>
    <fullName>Cote__c</fullName>
    <formula>IF(  ISBLANK(DateDecisionAcheter__c), &apos;FROID&apos;,  IF((DateDecisionAcheter__c - TODAY())&gt;30, &apos;TIEDE&apos;,  &apos;CHAUD&apos;  )  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cote</label>
    <type>Text</type>
</CustomField>