force-app/main/default/objects/Lead/fields/DateDecisionAcheter__c.field-meta.xml
<CustomField>
    <fullName>DateDecisionAcheter__c</fullName>
    <label>DateDecisionAcheter</label>
    <type>Date</type>
</CustomField>