force-app/main/default/objects/Lead/validationRules/VR_DateDecisionAcheter.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_DateDecisionAcheter</fullName>
    <active>false</active>
    <errorConditionFormula>DateDecisionAcheter__c &lt; TODAY()</errorConditionFormula>
    <errorDisplayField>DateDecisionAcheter__c</errorDisplayField>
    <errorMessage>Cette date ne peut pas être antérieur à la date du jour.</errorMessage>
</ValidationRule>